CSS Overflow fix

--- a/Portfolio.Me/Portfolio.Me/scss/app.scss
+++ b/Portfolio.Me/Portfolio.Me/scss/app.scss
@@ -14,6 +14,7 @@
 
 html {
     font-family: 'Open Sans', sans-serif;
+    overflow-x:hidden;
 }
 
 @function star-speckles ($n, $speckle) {
